# fastapi_e2e

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  read.md
src/: celery_app.py  main.py
src/api/: user_api.py
src/config/: config.ini  config.py
src/db/: connection.py
src/db/tables/: users_data_model.py
src/models/: user_schema.py
src/repositories/: user_repository.py
src/services/: user_service.py
src/utils/: logger.py
tests/: conftest.py  test_client_factory.py
tests/api/: user_api_test.py
tests/repositories/: user_repository_test.py
tests/services/: user_service_test.py
